# game-engine

./: .clang-format  .gitignore  .sonarcloud.properties  CMakeLists.txt  CMakePresets.json  Doxyfile  GameEngineEditor.json  LICENSE  README.md  _2editor_2src_2_editor_8cpp-example.html  _a_document_window_8hpp_source.html  _a_entity_property_8hpp_source.html  _access_8hpp_source.html  _action_8hpp_source.html  _action_group_8hpp_source.html  _action_history_8hpp_source.html  _action_manager_8hpp_source.html  _ambient_light_property_8hpp_source.html  _ambient_light_system_8hpp_source.html  _application_8hpp_source.html  _asset_8hpp_source.html  _asset_actions_8hpp_source.html  _asset_catalog_8hpp_source.html  _asset_importer_8hpp_source.html  _asset_importer_base_8hpp_source.html  _asset_importer_context_8hpp_source.html  _asset_importer_input_8hpp_source.html  _asset_location_8hpp_source.html  _asset_manager_window_8hpp_source.html  _asset_name_8hpp_source.html  _asset_pack_name_8hpp_source.html  _asset_ref_8hpp_source.html  _attributes_8hpp_source.html  _audio_handling_8hpp_source.html  _billboard_mesh_8hpp_source.html  _buffer_8hpp_source.html  _bullet_shot_event_8hpp_source.html  _camera_8hpp_source.html  _camera_controller_8hpp_source.html  _camera_factory_8hpp_source.html  (+4515 more)
common/: CMakeLists.txt  Error.hpp  Exception.cpp  Exception.hpp  Inline.hpp  Json.cppm  Json.hpp  Logger.hpp  Path.cpp  Path.hpp  String.hpp  Timer.hpp  Timestep.hpp  pch.hpp
common/math/: Bounds.cpp  Bounds.hpp  Frustum.hpp  Light.cpp  Light.hpp  Matrix.cpp  Matrix.hpp  Projection.cpp  Projection.hpp  Vector.cpp  Vector.hpp
common/save/: Serialization.cppm  Serialization.hpp  SerializationConcepts.cppm  SerializationConcepts.hpp  SerializationContext.cppm  SerializationContext.hpp  SerializationException.cppm  SerializationException.hpp  Serializer.cppm  Serializer.hpp
common/save/glm/: glm.cppm  glm.hpp
editor/: CMakeLists.txt  main.cpp
editor/include/: pch.hpp
editor/src/: ADocumentWindow.cpp  ADocumentWindow.hpp  DockingRegistry.cpp  DockingRegistry.hpp  Editor.cpp  Editor.hpp  IDocumentWindow.hpp  PrivacyConsentDialog.cpp  PrivacyConsentDialog.hpp  SceneManagerBridge.cpp  SceneManagerBridge.hpp  WindowRegistry.cpp  WindowRegistry.hpp
editor/src/Components/: Components.cpp  Components.hpp  EntityPropertiesComponents.cpp  EntityPropertiesComponents.hpp  Widgets.cpp  Widgets.hpp
editor/src/DocumentWindows/: AssetManagerWindow.cpp  AssetManagerWindow.hpp  ConsoleWindow.cpp  ConsoleWindow.hpp  EditorScene.cpp  EditorScene.hpp  InspectorWindow.cpp  InspectorWindow.hpp  MainScene.cpp  MainScene.hpp  MaterialInspector.cpp  MaterialInspector.hpp  PopupManager.cpp  PopupManager.hpp  Primitive.hpp  SceneTreeWindow.cpp  SceneTreeWindow.hpp  SceneViewManager.cpp  SceneViewManager.hpp
editor/src/ImNexo/: Components.cpp  Components.hpp  Elements.cpp  Elements.hpp  EntityProperties.cpp  EntityProperties.hpp  Guard.hpp  ImNexo.cpp  ImNexo.hpp  Panels.cpp  Panels.hpp  Utils.cpp  Utils.hpp  Widgets.cpp  Widgets.hpp
editor/src/backends/: ImGuiBackend.cpp  ImGuiBackend.hpp
editor/src/context/: ActionGroup.cpp  ActionGroup.hpp  ActionHistory.cpp  ActionHistory.hpp  ActionManager.cpp  ActionManager.hpp  SearchHistory.hpp  Selector.cpp  Selector.hpp  ThumbnailCache.cpp  ThumbnailCache.hpp
editor/src/exceptions/: Exceptions.hpp
editor/src/inputs/: Command.cpp  Command.hpp  InputManager.cpp  InputManager.hpp  WindowState.cpp  WindowState.hpp
editor/src/utils/: Config.cpp  Config.hpp  EditorProps.cpp  EditorProps.hpp  FileSystem.cpp  FileSystem.hpp  ScenePreview.cpp  ScenePreview.hpp  String.cpp  String.hpp  TransparentStringHash.hpp
engine/: CMakeLists.txt
engine/include/: json.hpp  pch.hpp
engine/include/glad/: glad.h
engine/include/stb/: stb_image.h
engine/src/: Application.cpp  Application.hpp  CameraFactory.cpp  CameraFactory.hpp  EntityFactory2D.cpp  EntityFactory2D.hpp  EntityFactory3D.cpp  EntityFactory3D.hpp  Init.cpp  LightFactory.cpp  LightFactory.hpp  Nexo.cpp  Nexo.hpp  SystemProfiler.hpp  Types.hpp  WorldState.hpp
engine/src/assets/: Asset.cpp  Asset.hpp  AssetCatalog.cpp  AssetCatalog.hpp  AssetCatalogDecl.hpp  AssetCatalogImpl.hpp  AssetID.hpp  AssetID.serializer.hpp  AssetImporter.cpp  AssetImporter.hpp  AssetImporterBase.cpp  AssetImporterBase.hpp  AssetImporterContext.cpp  AssetImporterContext.hpp  AssetImporterInput.hpp  AssetLocation.cpp  AssetLocation.hpp  AssetLocation.serializer.hpp  AssetName.hpp  AssetPackName.hpp  AssetRef.cpp  AssetRef.hpp  AssetRef.serializer.hpp  (+7 more)
examples/ecs/: CMakeLists.txt  exampleBasic.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/common/: CMakeLists.txt  Error.test.cpp  Exceptions.test.cpp  Light.test.cpp  LightAttenuation.test.cpp  Logger.test.cpp  Matrix.test.cpp  OnceRegistry.test.cpp  Path.test.cpp  Projection.test.cpp  String.test.cpp  Timer.test.cpp  Timestep.test.cpp  Vector.test.cpp
tests/crash/: CrashTracker.test.cpp
tests/ecs/: CMakeLists.txt  ComponentArray.test.cpp  ComponentManager.test.cpp  Components.test.cpp  Coordinator.test.cpp  Definitions.test.cpp  Entity.test.cpp  Exceptions.test.cpp  Group.test.cpp  GroupSystem.test.cpp  QuerySystem.test.cpp  SingletonComponent.test.cpp  SparseSet.test.cpp  System.test.cpp  save_components.test.cpp
tests/editor/: AssetManager.test  CMakeLists.txt  CameraInspector.test  Console.test  Docking.test  EditorScene.test  Global.test  Inspector.test  MaterialInspector.test  SceneTree.test
tests/engine/: CMakeLists.txt  EntityFactory3D.test.cpp  Factories.test.cpp  Types.test.cpp  WorldState.test.cpp  test.cpp
tests/renderer/: Attributes.test.cpp  Buffer.test.cpp  CMakeLists.txt  Exceptions.test.cpp  Framebuffer.test.cpp  Pipeline.test.cpp  Primitives.test.cpp  RenderPipeline.test.cpp  Renderer2D.test.cpp  Renderer3D.test.cpp  RendererAPI.test.cpp  Shader.test.cpp  ShaderLibrary.test.cpp  SubTexture2D.test.cpp  Texture.test.cpp  UniformCache.test.cpp  VertexArray.test.cpp  WindowProperty.test.cpp
tests/utils/: MathStubs.cpp  MockOpenGL.hpp  TestHelpers.hpp  comparison.hpp
(+831 files in other folders)
